--- a/hl7chile-ig-template/includes/_append.fragment-header.html
+++ b/hl7chile-ig-template/includes/_append.fragment-header.html
@@ -5,8 +5,7 @@
     </a>
 </div>
 <div id="family-nav">
-    <!--
-    <a id="hl7chile-logo" no-external="true" href="http://hl7chile.cl"><img height="71" alt="Visitar HL7 Chile" src="{{site.data.info.assets}}assets/images/hl7chile-logo.svg" /> </a>-->
+    <a id="hl7chile-logo" no-external="true" href="http://hl7chile.cl"><img height="71" alt="Visitar HL7 Chile" src="{{site.data.info.assets}}assets/images/hl7chile-logo.svg" /> </a>
 </div>
 <!--
 <div id="hl7-search">
